<?xml version="1.0"?>
<package>
  <name>rpp</name>
  <version>0.0.0</version>
  <description>The rpp package</description>

  <maintainer email="yuval@todo.todo">yuval</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
  <build_depend>robil2_msgs</build_depend>
  <run_depend>robil2_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  

  </export>
</package>