<?xml version="1.0"?>
<package>
  <name>se_r2rs</name>
  <version>0.0.0</version>
  <description>The se_r2rs package</description>

  <maintainer email="yuval@todo.todo">yuval</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
  <build_depend>robil2_msgs</build_depend>
  <run_depend>robil2_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  

  </export>
</package>